// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Flex passes \`aria-\` attributes through to the DOM 1`] = `
<div
  aria-hidden="true"
  class="c-dwCIWy c-dwCIWy-ejCoEP-direction-row c-dwCIWy-irEjuD-align-stretch c-dwCIWy-awKDG-justify-start c-dwCIWy-kVNAnR-wrap-noWrap"
>
  hola
</div>
`;

exports[`Flex passes \`data-\` attributes through to the DOM 1`] = `
<div
  class="c-dwCIWy c-dwCIWy-ejCoEP-direction-row c-dwCIWy-irEjuD-align-stretch c-dwCIWy-awKDG-justify-start c-dwCIWy-kVNAnR-wrap-noWrap"
  data-testid="some-random-id"
>
  hola
</div>
`;

exports[`Flex renders as passed HTML element 1`] = `
<h1
  class="c-dwCIWy c-dwCIWy-ejCoEP-direction-row c-dwCIWy-irEjuD-align-stretch c-dwCIWy-awKDG-justify-start c-dwCIWy-kVNAnR-wrap-noWrap"
>
  hola
</h1>
`;

exports[`Flex renders with css prop 1`] = `
<div
  class="c-dwCIWy c-dwCIWy-ejCoEP-direction-row c-dwCIWy-irEjuD-align-stretch c-dwCIWy-awKDG-justify-start c-dwCIWy-kVNAnR-wrap-noWrap c-dwCIWy-iiMKLbU-css"
>
  hola
</div>
`;

exports[`Flex renders with theme-aware values from Stitches config 1`] = `
<div
  class="c-dwCIWy c-dwCIWy-ejCoEP-direction-row c-dwCIWy-irEjuD-align-stretch c-dwCIWy-awKDG-justify-start c-dwCIWy-kVNAnR-wrap-noWrap c-dwCIWy-ibcCYNQ-css"
>
  hola
</div>
`;
